# fede

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  commits.txt  data.dvc  docker-compose.yml  loading-model.md  pyproject.toml  requirements.txt  script_notation.md
.claude/: settings.local.json
.dvc/: config
apps/: __init__.py
apps/api/: __main__.py  app.py  embedder.py  hybrid.py  runtime.py  search.py  settings.py
apps/landing/: package.json  wrangler.jsonc
apps/landing/src/layouts/: Layout.astro
apps/landing/src/pages/: index.astro
apps/web/: .cta.json  package.json
apps/web/src/: routeTree.gen.ts
apps/web/src/components/: Footer.tsx  Header.tsx
apps/web/src/routes/: __root.tsx  about.tsx  index.tsx
docs/: dataset.md  finetuning.md  upload_scripts.md  vector_store.md
evaluation/: checkpoint_manager.py  config.py  generator.py  validator.py
evaluation/baselines/: api_retriever.py  bm25_baseline.py  movie_key.py
evaluation/dataset_generation/: checkpoint_manager.py  config.py  generator.py  validator.py
evaluation/evaluation_dataset/: eval_queries.json  evaluation_report.json  generated_queries.json  movie_key_lookup.json
evaluation/metrics/: metrics.py
evaluation/ndcg_study/: assignments.json  grading_template.csv  grading_template_blank.csv
evaluation/pipeline/: evaluation_pipeline.py
evaluation/results/: accuracy_20260409T200443.csv  accuracy_20260410T144450.csv  ndcg_results.csv
evaluation_dataset/: generated_queries.json
finetuning/: __init__.py  config.py
finetuning/corpus/: __init__.py  scene_corpus.py
finetuning/dataset/: __init__.py  batch_builder.py  dataset_builder.py  negative_miner.py  positive_assigner.py  query_generator.py
finetuning/evaluation/: __init__.py  dataset_generator.py  metrics.py  pipeline.py  scene_evaluator.py  semantic_retriever.py
finetuning/scripts/: build_dataset.py  build_dataset_batch.py  clean_raw_queries.py  generate_eval.py  generate_eval_dataset.py  index_corpus.py  mine_hard_negatives.py  run_evaluation.py  train.py
finetuning/training/: __init__.py  model.py  trainer.py
knowledge_graph/: __init__.py  build_graph.py  filter_entities.py  graph_models.py  graph_normalize.py  graph_store.py  llm_filter_entities.py  ner_spacy.py  predicates.py  rb_filter_entities.py  relation_extraction.py
notebooks/: finetuning_pipeline.ipynb  script_chunker.ipynb  vector_db_smoke_test.ipynb
preprocessing/: __init__.py  chunker.py
scripts/: .indexed_movies.txt  build_movie_lookup.py  compute_ndcg.py  generate_ndcg_batches.py  generate_queries.py  generate_scene_queries.py  run_accuracy_eval.py  run_eval.py  run_evaluation.py  run_ndcg_eval.py  upload_scripts.py
tests/: test_api_app.py  test_api_search.py  test_clean_raw_queries.py  test_config.py  test_graph_normalize.py  test_graph_store.py  test_indexer.py  test_query_generator.py  test_retrieval.py  test_schemas.py
vector_db/: __init__.py  client.py  collections.py  config.py  crud.py  indexer.py  retrieval.py  schemas.py
vector_db/api/: __init__.py  __main__.py  app.py  embedder.py  models.py  runtime.py  settings.py
